Formatted index.html, getting error upon calculation

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,21 @@
     </head>
     
     <body>
+        <h1> Loan Calculator </h1>
+    <hr>
     
-        {% block body %}
+    <div class="wrapper">
+    
+        <div class="data">
+    
+            {% block body %}
         
-        {% endblock %}
+            {% endblock %}
+        
+        </div>
+    <div style="clear:both;"></div>
+    
+    </div>
         
     </body>
     
