--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,22 @@
     
     {% block body %}
     
-        <h2> This is my Flask server! </h2>
-        
-        <img src="{{ url_for('static', filename='images/kevin.png') }}"  />
+    <form method ="post">
+        <table>
+            <tr>
+                <td> Loan Amount: </td> <td> <input type="text" name="loanAmt" /> </td>
+            </tr>
+            <tr>
+                <td> Number of periodic payments: </td> <td> <input type="text" name="payments" /> </td>
+            </tr>
+            <tr>
+                <td> Periodic interest rate: </td> <td> <input type="text" name="interest" /> </td>
+        </table>
+            <br>
+        <input class="button" type="submit" formaction="/calculate" value="Calculate" />
+    </form>
+    
+    <p> {{ display }} </p>
+    <div style="clear:both;"></div>
     
     {% endblock %}
