Changing background/adding words

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
     <body>
         <h1> Loan Calculator </h1>
     <hr>
+        <h2> Enter the values below to calculate your periodic payment.
+        If payments are monthly, multiply the number of years on the loan by 12, and divide the interest rate by 12 to get monthly values.
+        </h2>
     
     <div class="wrapper">
     
