--- a/templates/index.html
+++ b/templates/index.html
@@ -7,19 +7,19 @@
     <form method ="post">
         <table>
             <tr>
-                <td> Loan Amount: </td> <td> <input type="text" name="loanAmt" /> </td>
+                <td> Loan Balance: </td> <td> <input type="text" name="loanAmt" /> </td>
             </tr>
             <tr>
                 <td> Number of periodic payments: </td> <td> <input type="text" name="payments" /> </td>
             </tr>
             <tr>
-                <td> Periodic interest rate: </td> <td> <input type="text" name="interest" /> </td>
+                <td> Periodic interest rate (Decimal form): </td> <td> <input type="text" name="interest" /> </td>
         </table>
             <br>
         <input class="button" type="submit" formaction="/calculate" value="Calculate" />
     </form>
     
-    <p> {{ display }} </p>
+    <p> Periodic Loan Payment: {{ display }} </p>
     <div style="clear:both;"></div>
     
     {% endblock %}
