--- a/templates/base.html
+++ b/templates/base.html
@@ -8,24 +8,7 @@
     </head>
     
     <body>
-        <h1> Loan Calculator </h1>
-    <hr>
-        <h2> Enter the values below to calculate your periodic payment.
-        If payments are monthly, multiply the number of years on the loan by 12, and divide the interest rate by 12 to get monthly values.
-        </h2>
-    
-    <div class="wrapper">
-    
-        <div class="data">
-    
-            {% block body %}
-        
-            {% endblock %}
-        
-        </div>
-    <div style="clear:both;"></div>
-    
-    </div>
+        <h1> Eric's HW4 </h1>
         
     </body>
     
