--- a/templates/add_animal.html
+++ b/templates/add_animal.html
@@ -1,18 +1,20 @@
-{% extends 'base.html %}
-{% block body %}
-<div>
 
-    <h3> Add A New Animal </h3>
 
-    <form method="POST" action="{{ url_for('add_animal') }}">
+    {% extends 'base.html' %}
+    {% block body %}
+    <div>
+
+        <h3> Add A New Animal </h3>
+     
+        <form method="POST" action="{{ url_for('add_animal') }}">
     
-        {{ form.csrf_token }}
-        {{ form.Name.label }} {{ form.Name(size = 20) }}
-        {{ form.Country.label }} {{ form.Country(size = 20) }}
+            {{ form.csrf_token }}
+            {{ form.Name.label }} {{ form.Name(size = 20) }}
+            {{ form.Country.label }} {{ form.Country(size = 20) }}
         
-        <input type="submit" value="Add Animal">
+            <input type="submit" value="Add Animal">
         
-    </form>
+        </form>
     
-</div>
-{% endblock %}
+    </div>
+    {% endblock %}
