--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,15 @@
     <head>
         <meta charset="utf-8">
         <title> {{ pageTitle }} </title>
-        <link rel="stylesheet" type = "text/css" href="{{ url_for('static', filename='css/stylesheet.css') }}" />
     </head>
     
     <body>
-        <h1> Eric's HW4 </h1>
+        <h1> Eric's Animals </h1>
+        <hr>
+        
+        {% block body %}
+        
+        {% endblock %}
         
     </body>
     
