--- a/templates/add_animal.html
+++ b/templates/add_animal.html
@@ -11,6 +11,8 @@
             {{ form.csrf_token }}
             {{ form.Name.label }} {{ form.Name(size = 20) }}
             {{ form.Country.label }} {{ form.Country(size = 20) }}
+            {{ form.Weight.label }} {{ form.Weight(size = 20) }}
+            {{ form.Quantity.label }} {{ form.Quantity(size = 20) }}
         
             <input type="submit" value="Add Animal">
         
