--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,21 @@
     {% extends 'base.html' %}
     
     {% block body %}
-    <p> <a href="{{ url_for('.add_animal')}}"> Add a new animal </a> </p>
+    <p><a href="{{ url_for('add_animal')}}"> Add a new animal</a></p>
+
+{% with messages = get_flashed_messages() %}
+ {% if messages %}
+ <div class="alert alert-warning alert-dismissible fade show" role="alert" id="flash">
+   {% for message in messages %}
+   <strong>Alert!</strong> {{ message }}
+   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+     <span aria-hidden="true">&times;</span>
+   </button>
+   {% endfor %}
+   {% endif %}
+   {% endwith %}
+ </div>
+ 
     {% if animals %}
         <table>
             <thead>
@@ -24,6 +38,13 @@
                     <td> {{ row.Country }} </td>
                     <td> {{ row.Weight }} </td>
                     <td> {{ row.Quantity }} </td>
+                    
+                        <td>
+                <form action="{{ url_for('animal', animal_id=row.animalID) }}" method="POST">
+                    <input type="submit" value="Details" class="btn btn-info" />
+                </form>
+            </td>
+            
                 </tr>
                 {% endfor %}
             </tbody>
