--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,12 @@
     {% extends 'base.html' %}
     
     {% block body %}
+
+<form method="POST">
+    <input type="text" autofocus="autofocus" name="search_string">
+    <input type="submit" formaction="/search" value="Search">
+</form>
+
     <p><a href="{{ url_for('add_animal')}}"> Add a new animal</a></p>
 
 {% with messages = get_flashed_messages() %}
@@ -18,6 +24,7 @@
    {% endwith %}
  </div>
  
+         <h3>{{ legend }}</h3>
     {% if animals %}
         <table>
             <thead>
