--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     {% extends 'base.html' %}
     
     {% block body %}
-
+<h3> Search for Animals by Country: </h3>
 <form method="POST">
     <input type="text" autofocus="autofocus" name="search_string">
     <input type="submit" formaction="/search" value="Search">
